--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ requires-python = ">=3.12"
 dependencies = [
     "lxml>=5.4.0",
     "pandas>=2.2.3",
+    "psycopg2-binary>=2.9.10",
+    "python-dotenv>=1.1.0",
+    "sqlalchemy>=2.0.40",
+    "sqlmodel>=0.0.24",
     "streamlit>=1.45.0",
 ]
 
