--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "beautifulsoup4>=4.13.4",
+    "html5lib>=1.1",
     "lxml>=5.4.0",
     "pandas>=2.2.3",
     "plotly>=6.0.1",
